[gd_scene load_steps=22 format=3 uid="uid://ti1aeqxbvpnb"]

[ext_resource type="Script" path="res://scenes/granada/granada.gd" id="1_2mkat"]
[ext_resource type="Texture2D" uid="uid://o83aukjua4ha" path="res://assets/Explosions/Explosion_blue_circle/Explosion_blue_circle1.png" id="1_tkl13"]
[ext_resource type="Texture2D" uid="uid://l2npmxwb5an2" path="res://assets/Circle_explosion1.png" id="2_fc5y8"]
[ext_resource type="Texture2D" uid="uid://b1o7cv3vy61mf" path="res://assets/Explosions/Explosion_blue_circle/Explosion_blue_circle2.png" id="2_w1ri2"]
[ext_resource type="Texture2D" uid="uid://djhomfe7bs0ns" path="res://assets/Explosions/Explosion_blue_circle/Explosion_blue_circle3.png" id="3_uwwto"]
[ext_resource type="Texture2D" uid="uid://5egr07mciudq" path="res://assets/Explosions/Explosion_blue_circle/Explosion_blue_circle4.png" id="4_dcryc"]
[ext_resource type="Texture2D" uid="uid://dbmuieb32x3mc" path="res://assets/Explosions/Explosion_blue_circle/Explosion_blue_circle5.png" id="5_a4ltg"]
[ext_resource type="Texture2D" uid="uid://bg8cespif12n1" path="res://assets/Explosions/Explosion_blue_circle/Explosion_blue_circle6.png" id="6_oxvy1"]
[ext_resource type="Texture2D" uid="uid://dd8182q8w5mi7" path="res://assets/Explosions/Explosion_blue_circle/Explosion_blue_circle7.png" id="7_hxhji"]
[ext_resource type="Texture2D" uid="uid://t47xy65chg5w" path="res://assets/Explosions/Explosion_blue_circle/Explosion_blue_circle8.png" id="8_f4e0l"]
[ext_resource type="PackedScene" uid="uid://dcd8guk1qivr4" path="res://scenes/colisao/daDanoDeColisao.tscn" id="11_pomf2"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_b7ryh"]
bounce = 1.0

[sub_resource type="SpriteFrames" id="SpriteFrames_spjan"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_tkl13")
}, {
"duration": 1.0,
"texture": ExtResource("2_w1ri2")
}, {
"duration": 1.0,
"texture": ExtResource("3_uwwto")
}, {
"duration": 1.0,
"texture": ExtResource("4_dcryc")
}, {
"duration": 1.0,
"texture": ExtResource("5_a4ltg")
}, {
"duration": 1.0,
"texture": ExtResource("6_oxvy1")
}, {
"duration": 1.0,
"texture": ExtResource("7_hxhji")
}, {
"duration": 1.0,
"texture": ExtResource("8_f4e0l")
}],
"loop": false,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_48lqh"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gf0tk"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fnp4d"]
radius = 15.0333

[sub_resource type="CircleShape2D" id="CircleShape2D_05q0p"]
radius = 20.025

[sub_resource type="CircleShape2D" id="CircleShape2D_tkv3q"]
radius = 27.0185

[sub_resource type="CircleShape2D" id="CircleShape2D_28fcu"]
radius = 34.3657

[sub_resource type="CircleShape2D" id="CircleShape2D_qpnnf"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_30avp"]
radius = 50.0

[node name="Granada" type="RigidBody2D"]
collision_layer = 9
collision_mask = 15
physics_material_override = SubResource("PhysicsMaterial_b7ryh")
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 5
script = ExtResource("1_2mkat")

[node name="DaDanoDeColisao" parent="." node_paths=PackedStringArray("nodeColisor") instance=ExtResource("11_pomf2")]
colision_damage = 0.5
nodeColisor = NodePath("..")

[node name="GranadaInerte" type="Sprite2D" parent="."]
position = Vector2(-1, -1)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_fc5y8")

[node name="Explosao" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -3)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_spjan")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="inerteTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="Hitbox_0" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_48lqh")
disabled = true

[node name="Hitbox_1" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_gf0tk")
disabled = true

[node name="Hitbox_2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -2)
shape = SubResource("CircleShape2D_fnp4d")
disabled = true

[node name="Hitbox_3" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -2)
shape = SubResource("CircleShape2D_05q0p")
disabled = true

[node name="Hitbox_4" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, -2)
shape = SubResource("CircleShape2D_tkv3q")
disabled = true

[node name="Hitbox_5" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_28fcu")
disabled = true

[node name="Hitbox_6" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2, -3)
scale = Vector2(0.7, 0.7)
shape = SubResource("CircleShape2D_qpnnf")
disabled = true

[node name="Hitbox_7" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_30avp")
disabled = true

[node name="Activation" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Explosao" to="." method="_on_explosao_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="inerteTimer" to="." method="_on_inerte_timer_timeout"]
[connection signal="timeout" from="Activation" to="." method="_on_activation_timeout"]
